--- a/Jersey-Store/component/sidebar.html
+++ b/Jersey-Store/component/sidebar.html
@@ -12,7 +12,7 @@
                     <tr>
                         <td>
                             <div class="form-check">
-                                <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+                                <input class="form-check-input" type="checkbox" value="New" id="checkboxnew">
                                 <label class="form-check-label" for="defaultCheck1">
                                     New Release
                                 </label>
@@ -22,7 +22,7 @@
                     <tr>
                         <td>
                             <div class="form-check">
-                                <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+                                <input class="form-check-input" type="checkbox" value="Vintage" id="checkboxvintage">
                                 <label class="form-check-label" for="defaultCheck1">
                                     Vintage
                                 </label>
