--- a/style/style.css
+++ b/style/style.css
@@ -226,6 +226,17 @@ span.number {
     width: 70%;
 }
 
+.nav-collapse{
+    display: none;
+    flex-basis: 100%;
+    flex-grow: 1;
+    align-items: center;
+}
+
+.nav-collapse.show{
+    display: flex;
+}
+
 .tab-content {
     color: #FFFFFF;
 }
@@ -362,20 +373,21 @@ img {
     font-weight: bold;
     font-size: 18px;
     transition: 0.6s ease;
-    border-radius: 0 3px 3px 0;
+    border-radius: 50%;
     user-select: none;
 }
 
 /* Position the "next button" to the right */
 .next {
     right: 0;
-    border-radius: 3px 0 0 3px;
+    border-radius: 50%
 }
 
 /* On hover, add a black background color with a little bit see-through */
 .prev:hover,
 .next:hover {
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: #5468E7;
+    border-radius: 50%;
 }
 
 /* Caption text */
@@ -744,6 +756,15 @@ img {
     padding-bottom: 10em;
 }
 
+#lower-slideshow .mySlides{
+    margin-top: 4em;
+}
+    
+#lower-slideshow .mySlides img{
+    width: 80%;
+    margin: 0 auto;
+}
+
 .greet::before {
     content: url(/img/emoji.png);
     margin-right: 10px;
@@ -1063,6 +1084,11 @@ footer .nav-item {
         line-height: 55px;
         width: 100%;
     }
+    
+    .card-2{
+        margin-top: 2em;
+        margin-bottom: 2em;
+    }
 
     .lower-tab-content .col-lg-7,
     .lower-tab-content .col-lg-5 {
@@ -1076,6 +1102,25 @@ footer .nav-item {
     .card-1,
     .card-2 {
         width: 100%;
+    }
+    
+    #lower-slideshow .next, #lower-slideshow .prev{
+        position: static;
+    }
+    
+    #lower-slideshow .mySlides img{
+        width: 100%;
+    }
+    
+    #lower-slideshow .button{
+        margin-bottom: 3em;
+        margin-top: 2em;
+    }
+    
+    .card-content .btn-contact{
+        width: 100%;
+        margin-top: 3em;
+        background: #5468E7;
     }
 
     .card-content .img-def {
