--- a/Jersey-Store/component/header.html
+++ b/Jersey-Store/component/header.html
@@ -64,9 +64,7 @@
                     <h3 class="title col-4">TOTAL</h3>
                     <p class="col-8">Rp <span class="price-value">1111</span></p>
                 </div>
-                <button type="button" class="btn btn-warning checkout">
-                    <h3>CHECKOUT</h3>
-                </button>
+                <a class="btn btn-warning checkout" href="checkout.html" role="button"><h3>CHECKOUT</h3></a>
             </div>
             <div id="wishWindow" class="sideProduct hide">
                 <div class="top">
