--- a/Jersey-Store/component/header.html
+++ b/Jersey-Store/component/header.html
@@ -1,4 +1,4 @@
-<div id="header">
+<div>
     <nav id="logo" class="navbar navbar-expand-lg navbar-light sticky-top">
         <div class="container-fluid">
             <a class="navbar-brand brand-black" href="#"
