--- a/Jersey-Store/css/style.css
+++ b/Jersey-Store/css/style.css
@@ -1167,6 +1167,11 @@ h3.h3 {
 
 
 @media only screen and (min-width:768px) {
+  table{
+    width: 85%;
+    margin: 0 auto;
+  }
+  
 }
 
 @media (min-width: 768px) {
