--- a/Jersey-Store/css/style.css
+++ b/Jersey-Store/css/style.css
@@ -1009,7 +1009,9 @@ h3.h3 {
   border: 1px solid rgba(0, 0, 0, .1);
   border-radius: 50%;
   margin: 0 2px;
-  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   transition: all .3s ease 0s
 }
 
