--- a/Jersey-Store/component/header.html
+++ b/Jersey-Store/component/header.html
@@ -11,8 +11,8 @@
                         aria-haspopup="true" aria-expanded="false"> KATALOG<span class="sr-only">(current)</span></a>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                         <a class="dropdown-item current" href="katalog.html">MEN'S JERSEY</a>
-                        <a class="dropdown-item" href="#">WOMEN'S JERSEY</a>
-                        <a class="dropdown-item" href="#">SPORTSWEAR</a>
+                        <a class="dropdown-item" href="katalog-women.html">WOMEN'S JERSEY</a>
+                        <a class="dropdown-item" href="shoes.html">SHOES</a>
                     </div>
                 </li>
                 <li class="nav-item">
