--- a/Jersey-Store/css/style.css
+++ b/Jersey-Store/css/style.css
@@ -248,6 +248,7 @@ li.buyItem {
 .buyItem .social li a:hover {
   background: #e67e22;
   color: #fff;
+  text-decoration: none;
 }
 
 .brand-black {
