--- a/Jersey-Store/component/header.html
+++ b/Jersey-Store/component/header.html
@@ -13,13 +13,11 @@
                         <a class="dropdown-item current" href="katalog.html">MEN'S JERSEY</a>
                         <a class="dropdown-item" href="katalog-women.html">WOMEN'S JERSEY</a>
                         <a class="dropdown-item" href="shoes.html">SHOES</a>
+                        <a class="dropdown-item" href="katalog-sportswear.html">SPORTSWEAR</a>
                     </div>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link sans-serif" href="katalog.html">CUSTOMIZE</i></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link sans-serif" href="about.html">ABOUT<span class="sr-only">(current)</span></a>
                 </li>
             </ul>
         </div>
